Revision history for Perl extension IPC::Shareable.

1.08 UNREL
    -

1.07    2022-03-04
    - When running in forked environments, _shm_key_rand() was consistently
      returning the same 'random' key to each forked process. We've fixed this
      issue, and added tests for it (fixed by adding a call to srand() before
      rand)
    - Move $SIG{CHLD} handlers to spawn() and unspawn() instead of having them
      global (fixes #15)
    - t/65-seg_size.t fails on 32-bit perls; Add a check and bail if we're on
      a perl < 64-bit (fixes #14)

1.06    2021-09-08
    - Fix significant bug where at least on MacOS, if we generated a CRC of a
      key that was greater than 0x80000000, it would round down the key to that
      number exactly, causing duplicates, and incorrect segment access
    - Added new() method, returns a reference (default hash) without having to
      do the tie() directly
    - Fix issue in JSON decoder where an empty JSON string may have caused
      decode failure
    - Modify t/65-seg_size.t beyond RAM max test to cover varying error messages
      on differing OSs
    - Renamed t/67-out_of_memory.t as the tests are related to exhausting SHM
      slots, not RAM

1.05    2021-07-16
    - Bump prereq version of Test::SharedFork to 0.35
    - Added ability to use JSON as the serializer
    - Added ipcs()
    - Added test to ensure we croak if data size is greater than segment size
    - Added 'tidy' attribute, removes unneeded nested structure segments
    - In SharedMem, added _key attribute, and added set/get methods
    - Changed key generation from using padding, pack and unpack to using
      String::CRC32's crc32(), which allows arbitrary, unpadded strings
    - Added attributes() allows fetching one, or all of the object's atttributes
    - Added 'limit' attribute, by setting false, allows a user to set a segment
      size larger than our internal 1GB default
    - Cleaned up exception throwing (particularly if seg size eats up all